--- a/index.html
+++ b/index.html
@@ -87,6 +87,20 @@
       from { opacity: 0; transform: translateY(4px); }
       to { opacity: 1; transform: translateY(0); }
     }
+
+    /* Tab Utilities for snippet compatibility */
+    .tabs {
+      display: flex;
+      gap: 4px;
+    }
+    .tab {
+      cursor: pointer;
+      user-select: none;
+      transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .panel-body {
+      transition: opacity 0.3s ease;
+    }
   </style>
   <script type="importmap">
 {
